<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2022 Project-QiMao
     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at
          http://www.apache.org/licenses/LICENSE-2.0
     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">

    <string name="qimao_settings_title">QiMao Settings</string>
    <string name="qimao_settings_summary">Hello World!</string>
    <string name="device_part_title">Device Settings</string>

    <!-- Statusbar net monitor -->
    <string name="traffic_title">Traffic Indicators</string>
    <string name="network_traffic">Network traffic</string>
    <string name="network_traffic_state_title">Network traffic display</string>
    <string name="network_traffic_location">Traffic indicator placement</string>
    <string name="traffic_disabled">Disabled</string>
    <string name="traffic_statusbar">Statusbar</string>
    <string name="traffic_expanded_statusbar">Expanded header</string>
    <string name="network_traffic_autohide_threshold_title">Net activity autohide threshold (KB/s)</string>
    <string name="network_traffic_arrow">Show arrows</string>
    <string name="network_traffic_arrow_summary">Show the network traffic indicator arrows</string>
    <string name="network_traffic_type">Select net activity type</string>
    <string name="show_network_traffic_combined">Combined (Upload + Download)</string>
    <string name="show_network_traffic_dynamic">Dynamic</string>
    <string name="show_network_traffic_up">Upload</string>
    <string name="show_network_traffic_down">Download</string>
    <string name="show_network_traffic_all">Both</string>
    <string name="nettraf_font_size">Single net font size</string>

    <!-- Game Space -->
    <string name="game_space_title">Game Space</string>
    <string name="game_space_summary">Enhance your gaming experience</string>

    <!-- Status Bar Lyric -->
    <string name="status_bar_show_lyric_title">Status bar lyric</string>
    <string name="status_bar_show_lyric_summary">Show lyric in status bar. Thanks to @cjybyjk and @AmeChanRain! (from @exTHmUI)</string>

</resources>