<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2021 Project-QiMao
     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at
          http://www.apache.org/licenses/LICENSE-2.0
     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:settings="http://schemas.android.com/apk/res/com.android.settings"
    android:title="@string/qimao_settings_title" >
     
     <Preference
          android:key="traffic"
          android:fragment="com.qimao.exsettings.fragments.Traffic"
          android:icon="@drawable/ic_traffic"
          android:title="@string/traffic_title" />

    <Preference
        android:title="@string/game_space_title"
        android:summary="@string/game_space_summary"
        android:order="-995">
        <intent
            android:action="android.intent.action.MAIN"
            android:targetPackage="io.chaldeaprjkt.gamespace"
            android:targetClass="io.chaldeaprjkt.gamespace.settings.SettingsActivity" />
    </Preference>

        <!-- Device Part -->
        <Preference
            android:key="device_part"
            android:persistent="false"
            android:title="@string/device_part_title"
            android:icon="@drawable/ic_settings_device">
            <intent android:action="android.intent.action.MAIN"
                 android:targetPackage="org.omnirom.device"
                 android:targetClass="org.omnirom.device.DeviceSettings"/>
        </Preference>

</PreferenceScreen>
